# Internship

./: .gitignore
Poetry/myproject/: pyproject.toml
assignment 1/: Tuples.py  booleans.py  if _else.py  list.py  loops.py  operators.py  sets.py  string.py  string_assignment.py  string_formatting.py
assignment 2/: dictionary.py  functions.py
assignment 3/: import_func.py  typehint.py
assignment 3/OOP/: Polymorphism.py  abstraction.py  encapsulation.py  inheritance.py  oop.py
fastAPI/: employee.py  main.py  student.py
fastAPI/assignment/: main.py
fastAPI/assignment/env/: pyvenv.cfg
fastAPI/db/: .env  Dockerfile  alembic.ini  docker-compose.yml  main.py  requirements.txt
fastAPI/db/alembic/: env.py
fastAPI/db/core/: dependencies.py
fastAPI/db/crud/: __init__.py  todo_crud.py  user_crud.py
fastAPI/db/models/: __init__.py  todo_model.py  user_model.py
fastAPI/db/myenv/: pyvenv.cfg
fastAPI/db/routers/: __init__.py  admin_router.py  todo_routers.py  user_routers.py
fastAPI/db/schemas/: __init__.py  todo_schema.py  token_schema.py  user_schema.py
fastAPI/db/utils/: auth_utils.py  database_utils.py
fastAPI/env/: pyvenv.cfg
fastAPI/env/Scripts/: activate  activate.bat
filehandeling/: .env  database.py  main.py  models.py  requirements.txt
task_1/: README.md  main.py  requirements.txt
task_2/: README.md  config.py  main.py  requirements.txt  utils.py
task_3/: .env  README.md
task_3/app/: main.py
task_3/app/crud/: employee_crud.py
task_4/: README.md  requirements.txt
task_4/alembic/: env.py
task_4/app/: main.py
(+19 files in other folders)
